refactor: update HTML metadata for Ultimate Tic Tac Toe game

--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/index.css" />
 
-    <title>Chef</title>
-
+    <title>Ultimate Tic Tac Toe – Play Online</title>
+    <meta
+      name="description"
+      content="Play Ultimate Tic Tac Toe online! Challenge your friends or test your skills against the computer in this advanced version of the classic Tic Tac Toe game. Free, fun, and mobile-friendly."
+    />
+    <meta
+      name="keywords"
+      content="Ultimate Tic Tac Toe, Tic Tac Toe, Online Game, Play Tic Tac Toe, Strategy Game, Board Game, Multiplayer, Free Game"
+    />
+    <meta property="og:title" content="Ultimate Tic Tac Toe – Play Online" />
+    <meta
+      property="og:description"
+      content="Play Ultimate Tic Tac Toe online! Challenge your friends or test your skills in this advanced version of the classic Tic Tac Toe game."
+    />
     <meta property="og:image" content="/og-preview.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ultimate Tic Tac Toe – Play Online" />
+    <meta
+      name="twitter:description"
+      content="Play Ultimate Tic Tac Toe online! Challenge your friends or test your skills in this advanced version of the classic Tic Tac Toe game."
+    />
+    <meta name="twitter:image" content="/og-preview.jpg" />
   </head>
   <body>
     <div id="root"></div>
