--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       property="og:description"
       content="Play Ultimate Tic Tac Toe online! Challenge your friends or test your skills in this advanced version of the classic Tic Tac Toe game."
     />
-    <meta property="og:image" content="/og-preview.jpg" />
+    <meta property="og:image" content="images/tictactoe.jpg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:url" content="https://ultimate-t1ct4ct0e.netlify.app/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Ultimate Tic Tac Toe – Play Online" />
     <meta
