refactor: update game description in HTML and enhance LocalPlay component with additional information

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Ultimate Tic Tac Toe – Play Online</title>
     <meta
       name="description"
-      content="Play Ultimate Tic Tac Toe online! Challenge your friends or test your skills against the computer in this advanced version of the classic Tic Tac Toe game. Free, fun, and mobile-friendly."
+      content="Play Ultimate Tic Tac Toe game online! Challenge your friends or test your skills against the computer in this advanced version of the classic Tic Tac Toe game. Free, fun, and mobile-friendly."
     />
     <meta
       name="keywords"
