refactor: update title for consistency and improve HTML structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/index.css" />
+    <link rel="icon" type="image/jpeg" href="/images/tictactoe.jpg" />
 
-    <title>Ultimate Tic Tac Toe – Play Online</title>
+    <title>UltimateTTT</title>
     <meta
       name="description"
       content="Play Ultimate Tic Tac Toe game online! Challenge your friends or test your skills against the computer in this advanced version of the classic Tic Tac Toe game. Free, fun, and mobile-friendly."
